# ac-worldgen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  deploy.cmake  platform_config.cmake  qt6.natvis  update_function_list.bat
docs/: app_interface.md  client_example.d  function_list.md  language_reference.md  woglac_reference.md  woglac_tutorial.md
docs/img/: nodeEdges.afdesign  nodeOrientations.afdesign
docs/tutorial/: 01_flatland.md  02_hills.md  03_caves.md  04_voronoi.md  04_voronoi_domain_warping.md  05_warping.md  06_biomes.md  07_trees.md  08_dungeons.md  08_structures.md  09_mazes.md  10_walls.md  README.md
docs/tutorial/vox/: castle_tower.vox  castle_wall.vox
docs/woglac_examples/: overworld.woglac  rooms.woglac
examples/: caves.woglac  flat.woglac
grammar/: Woglac.g4  gen_parser.sh  gen_woglac.sh
src/: CMakeLists.txt  declares.h  defines.h  main.cpp  main.h  pch.h
src/util/: assert.cpp  assert.h  bitset.h  blockorientation.cpp  blockorientation.h  blockside.cpp  blockside.h  blockworldpos.cpp  blockworldpos.h  bytesizeliterals.h  chunkworldpos.cpp  chunkworldpos.h  containerutils.h  enumutils.h  flags.h  forit.h  hashutils.h  iterators.h  macroutils.h  matrix.h  quickcache.h  randomaccesshashtable.h  scopeexit.h  tracyutils.cpp  tracyutils.h  valueguard.h  vector.h
src/woglac/: wglcompiler.cpp  wglcompiler.h  wglfile.cpp  wglfile.h
src/woglac/parser/: Woglac.interp  Woglac.tokens  WoglacBaseListener.cpp  WoglacBaseListener.h  WoglacLexer.cpp  WoglacLexer.h  WoglacLexer.interp  WoglacLexer.tokens  WoglacListener.cpp  WoglacListener.h  WoglacParser.cpp  WoglacParser.h  antlr4-runtime.h
src/woglac/source/: wglsource.cpp  wglsource.h  wglsourcebuffer.cpp  wglsourcebuffer.h  wglsourcefile.cpp  wglsourcefile.h
src/woglac/supp/: wglapicontext.cpp  wglapicontext.h  wglcontext.cpp  wglcontext.h  wgldeclarationpass.cpp  wgldeclarationpass.h  wgldefines.h  wglerror.cpp  wglerror.h  wglimplementationpass.cpp  wglimplementationpass.h  wglinclude.h  wglmodule.cpp  wglmodule.h  wglpass.cpp  wglpass.h  wglsymbol.cpp  wglsymbol.h  wglutils.cpp  wglutils.h  wglutils.h~
src/worldgen/base/: worldgenapi.cpp  worldgenapi.h
src/worldgen/base/autogen/: wga_funcs.cpp
src/worldgen/base/supp/: wga_biome.cpp  wga_biome.h  wga_component.cpp  wga_component.h  wga_componentnode.cpp  wga_componentnode.h  wga_grammarsymbol.cpp  wga_grammarsymbol.h  wga_rule.cpp  wga_rule.h  wga_ruleexpansion.cpp  wga_ruleexpansion.h  wga_symbol.cpp  wga_symbol.h  wga_value.cpp  wga_value.h
src/worldgen/cpu/: worldgenapi_cpu.cpp  worldgenapi_cpu.h
src/worldgen/cpu/autogen/: wga_funcs_cpu.cpp
src/worldgen/cpu/funcs/: wga_biomefuncs_cpu.cpp  wga_biomefuncs_cpu.h  wga_funcs_cpu.cpp  wga_funcs_cpu.h  wga_noisefuncs_cpu.cpp  wga_noisefuncs_cpu.h  wga_samplingfuncs_cpu.cpp  wga_samplingfuncs_cpu.h  wga_structurefuncs_cpu.cpp  wga_structurefuncs_cpu.cpp~  wga_structurefuncs_cpu.h  wga_utilityfuncs_cpu.cpp  wga_utilityfuncs_cpu.h
src/worldgen/cpu/supp/: wga_biomedata_cpu.cpp  wga_biomedata_cpu.h  wga_datacache_cpu.cpp  wga_datacache_cpu.h  wga_datacacheinstance_cpu.cpp  wga_datacacheinstance_cpu.h  wga_datahandle_cpu.cpp  wga_datahandle_cpu.h  wga_datarecord_cpu.cpp  wga_datarecord_cpu.h  wga_fillfunc_cpu.h  wga_structuregenerator_cpu.cpp  wga_structuregenerator_cpu.h  wga_structureoutputdata_cpu.cpp  wga_structureoutputdata_cpu.h  wga_value_cpu.cpp  wga_value_cpu.h  wga_valuerecs_cpu.h  wga_valuewrapper_cpu.h  worldgen_cpu_utils.cpp  worldgen_cpu_utils.h
src/worldgen/util/: voxparser.cpp  voxparser.h  wg_macro_def.h  wg_macro_undef.h
supp/autogen/: README.md  dub.sdl  functions.yaml  main.d
supp/grammar/: gen_parser.sh  woglac_experimentatorium.woglac
test/: test1.bat  test1.woglac  test1_data.txt
